--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.7.0",
     "react-router-dom": "^7.7.0",
+    "recharts": "^3.1.0",
     "typeit-react": "^2.7.8"
   },
   "devDependencies": {
